// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders correctly default 1`] = `
<Styled(TouchableOpacity)
  disabled={false}
  fillColor="[mocked blue200]"
  isBorder={false}
  isMarginBottom={false}
  isMarginRight={false}
  isOutline={false}
  isSmallHeight={false}
  isSmallWidth={false}
  onPress={[MockFunction]}
>
  <Styled(Text)
    fillColor="[mocked blue200]"
    isOutline={false}
  >
    <Text>
      Test Child
    </Text>
  </Styled(Text)>
</Styled(TouchableOpacity)>
`;

exports[`Button component renders correctly with enabled styles 1`] = `
<Styled(TouchableOpacity)
  disabled={false}
  fillColor="[mocked blue200]"
  isBorder={false}
  isMarginBottom={false}
  isMarginRight={false}
  isOutline={true}
  isSmallHeight={false}
  isSmallWidth={false}
  onPress={[MockFunction]}
>
  <Styled(Text)
    fillColor="[mocked blue200]"
    isOutline={true}
  >
    <Text>
      Test Child
    </Text>
  </Styled(Text)>
</Styled(TouchableOpacity)>
`;

exports[`Button component renders correctly with enabled styles and fillColor 1`] = `
<Styled(TouchableOpacity)
  disabled={false}
  fillColor="[mocked green500]"
  isBorder={false}
  isMarginBottom={false}
  isMarginRight={false}
  isOutline={true}
  isSmallHeight={false}
  isSmallWidth={false}
  onPress={[MockFunction]}
>
  <Styled(Text)
    fillColor="[mocked green500]"
    isOutline={true}
  >
    <Text>
      Test Child
    </Text>
  </Styled(Text)>
</Styled(TouchableOpacity)>
`;

exports[`Button component renders correctly with loading state 1`] = `
<Styled(TouchableOpacity)
  disabled={false}
  fillColor="[mocked blue200]"
  isBorder={false}
  isMarginBottom={false}
  isMarginRight={false}
  isOutline={false}
  isSmallHeight={false}
  isSmallWidth={false}
  onPress={[MockFunction]}
>
  <ActivityIndicator
    animating={true}
    color="[mocked white]"
    hidesWhenStopped={true}
    size="large"
  />
</Styled(TouchableOpacity)>
`;
